@@ -15,6 +15,7 @@ Workbook 1.1
   - apply text wrap to smart notepad imports
   - preliminary wmf (windows metafile) support
   - "DefaultPageSize" option in Workbook.ini
+  - "AutosaveInterval" option in Workbook.ini (milliseconds, set to 0 to turn off)
 
   bug fixes
   - stop application closing aberrantly when screen annotation form is closed
